enable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:KwR6AUERHHfUDDKnLzm0Ise3E2TG1ASWiKx2+HNVAd63nPG12Qz0jA4hARwfyHJFL/LMzJmtSgtZ7siRwDtPigE=,iv:1U8P5RsekxmA0MULBL1gcVV6juSsKRBsgk+9yXMPVes=,tag:7jlw/vrhOsyNKbDgrbqdwA==,type:comment]
-#ENC[AES256_GCM,data:B5QkSzLmKzK/TMvQUAYSWmVvDZkAP30hDYAZerukm3CR/ViVzrCIEbxp9tg=,iv:i9/NVtp2Sq7nGA+HzKRINexEwbFeCWbS+mnLWd8eEvg=,tag:QLIYZLGP1rThCBcfinWjnA==,type:comment]
-VIP: ENC[AES256_GCM,data:QFIn3Sc4EXZRgU/z9Q==,iv:zR/jx0Q7pJNgTunz8V2WfHOrwNO3oscvVYU3+gSnGeM=,tag:gXNc+nIZOrvOsPijBMgwkA==,type:str]
-#ENC[AES256_GCM,data:tqLqxP2lh1AD9IU0Q4aF4cChDqafvqCC7/jb,iv:Jg1KMjToKnHizXDQnhYXjCpFjjl4jD6bEqZKU5j2Z1g=,tag:zM5jkZNnqM5EuJP0fGW1lw==,type:comment]
-#ENC[AES256_GCM,data:guYJTp2V91j3bJA/a0QRHpZs7FnxozfoRwg7yNYI0EOzdYIvN1F3g9BrB+0+/cyZE4av58YhFZKt8pZu55G5Y6wj6TO+sQP6upuTPkAHyQhrCY872Je6BY0=,iv:6rUVOguiDnJKvu37QcDu9IJ1htWrV06zVKv91rRj/Rs=,tag:tmjcFTN91+J3+jXyOcXWGw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:XvSA4QKwtyY2l594V/c=,iv:ImvSmkCM6sF55hKhT2FjKumA2N4AlTnKFvUkm1B5xmk=,tag:bwOSpJZwrNmuq/Sq/hvkKg==,type:str]
-#ENC[AES256_GCM,data:UGdrpaJgaaPS3OffN9dDRAfKm+xEoao9KqqEKu+akdMuCQ==,iv:HpMEECnbyv+nhnRlEQgvtt/5Ypdm1aUN5IYqrdQy/VE=,tag:WbnPnoLPWNjFhToCOZJD5Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:9F3YnX2lHjHvKJUtNA==,iv:MqyvfMP1mwclcX75feelWwEoKIlA1J7cGqdKYwUrjng=,tag:zlGn4euZjJSxzNaAnB1+cA==,type:str]
-#ENC[AES256_GCM,data:XvwUV6qtk3q+j4V1WF/XHvf9kHlWYnKATYTnJWnf0Rms9t5nk79NmWRD4mvr4rs=,iv:e8PHevDo8Z8gRVkUpgWr6Kpj/ThCMfmzYR7Zm1qezVU=,tag:V7hiHQm9wQf9sAwbHb2Stg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:+S48HH5bwUsc1AaaiGkFNu7E4r5CIxRpjg68/eVNZA==,iv:v6fei4KruZ8suGkpMcR6TwGZUCIpq6eUhfsCxiUrbJM=,tag:aeSWJt54xi8Ez5E3qebm4Q==,type:str]
-#ENC[AES256_GCM,data:1pIuze0p/k6bixxA4svIUZ/bnmEY5ZGRRWQzVWdaZx2f68qfDpzEKVlHJKePdZbgxyxKMHZWiQb+POTrfDJMM1mCVohofTNCycYwW5K6EFcL3g==,iv:TBL59tBkZW1OIjySP9LCUp7CHRKcJ69Wb3ANvQo3bx4=,tag:2eZz8xKkMSkn8qoLxg/Q4w==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:B/cWUYnNfFpRd/2CrU7y,iv:DTkicfjApJ9p1m+g57+HEA6suLPLA3txQWTRX/Aihz0=,tag:2tNQfL3FFKKbsFckB5sSvw==,type:str]
-#ENC[AES256_GCM,data:iMBEu1fmgAIeWq9oSIi6xfq0+JjfUC9Jt7fKPjENZexa,iv:klC3d3KO+oBreNWuoq3OU9g7F3GSn85MOX+nOpWeSeI=,tag:fM2oBiBk7Z1dUKg/zrX/qg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:mlzAnyxQqkotfmE8Z8WU,iv:sbiFqlyb6MKV+J5wkSQP072C7DZNZ61zvDb/7KL8NnY=,tag:kRVsBMkrLrwi5H0VbQPcGg==,type:str]
-#ENC[AES256_GCM,data:or1u0mUHzTjQbx9gPDSePyoWfYGrymRdE/+IYS0R/9WbCsNi0ttviNPLe3mSd+K+gjEn8vfQGH/+S8Hxb01usvmB2ho+pCZiJEWgRjl3h3c=,iv:NDaVJlxAB6FQYAjgERA610EN3KEfm/9H8JtabXMOBW8=,tag:e9pPulxiQeSfxt+rjm1rqg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:mBrYiSt437IP/kGeD725,iv:xFlMQR1lyBi2hXY9VPv4EiYhkwYrcmtKsM+su6ZJhO0=,tag:SlpBKlFQeX7nJ6qu9oNhJA==,type:str]
-#ENC[AES256_GCM,data:LLXnL9xHCcohdWCFCAipwSmS+WcWvljpUEatCNT76UNrZEnluHd7y3mr19SUbrsI0xE6YRXGU71FvdRIbPGewKXu23JKGLzfuT0u9JplG0yzLodtttTA,iv:P82J1BvCk2lWRFCqGQ4O4bQjOtAW7T3BM1RdOp2rFeA=,tag:dE4pc0nsHPcIzUyIMDmNCA==,type:comment]
-#ENC[AES256_GCM,data:1Z+mcAnqMiEumH6Y+Hgaie+FLnxQ4yN0jWObKt3kXuTm4G9QfnDq9ThRy3EykgIjSwVNqk3Zd7J4dk/+tiAMgajboMtlpRHXKY3tFiQYm/mRSsd/z35GcvLR5gqp9n519jobWFkzuXZtp2yhdrR29wrshNGW1gURzsB9gA==,iv:QCI3gg69Zm2GGJ0gCBu+JvNcl4zP67DS/FjufqiQ4CQ=,tag:O62mghFX4g+Y/mouuig9Dg==,type:comment]
-#ENC[AES256_GCM,data:eVF2r8K2LvqoMFJhKrGypNFrQxYPsvurvJ8U2XVCzVUxi+OeT4+MvbSrU0LiwbPPRHSTGBHWfQp5zS0m+GPomAoLtaZvUOpNom/IU6yr4zk=,iv:KwI5nK8/LhpXlHMlVbrwOxTANkhsBlgpqMyutMaWKjA=,tag:t60bV4aHinfvl3qUY9Yutg==,type:comment]
-#ENC[AES256_GCM,data:x2DG/0D5YU9Kh6IolOCe6i8uY639htFsIDKt/QqAqWStIQFgcrnF0lNqJRhtfiKZyT3/Y//W,iv:vl6SMvJuCTH9aibTda0GPf+AkzaAHaKvSF0QLgNTuS8=,tag:yWUw+6Ff/ZSn0Gc573euJw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:B4Z9sLl/i+NbuVsj,iv:kT7ugDCKddxYjS4i/Cbsj6FOqJBltpk2ezCf4xYPRT8=,tag:9rV0Pgirbd5/yt6Uh2T0fw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OC40pcTU12nGVa6ZkeopR2I=,iv:8HY8Q2jipL4EeQMjhpktLyD/oMIVbfc9DkIRJO2EZIQ=,tag:4KMKqSZ0LowDDl3SAqiVxQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:V4ki+tRQltuTjCCoUdwnoPKmB/N97wHTMEPf+LCwIKg=,iv:Qf7o42uvfSKvbOUUS00zW6uLYVGJvwhTewHZ3aIrp58=,tag:KnrS5DIE2VuYdHbriiiF3A==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:L3l3hBQlmpuCAsBBr9/z/S3cYVCvCko5xNUzrSDzrQpOx5iL7jldJA==,iv:Kp+kFXqI8eUjpUZvSefiKdv0vdp6Go1eyN5Jhs4BgPQ=,tag:jRLcQhNKw2e1uyMT+byDMA==,type:str]
-#ENC[AES256_GCM,data:H+n47NK3QRI4GbUlk7Ubr9+ssLo3F2+TQmNJEgX+K0y7SpQpfoAWQe1fJr0jrsct6Kxrc7O2tkd9hUveKEhIsQ==,iv:37n4VF9HJLyn//TQMiP8EmqjRNHrIlQTQfPkTrKJAd8=,tag:Bf9KKEs19raB5fgdIjPpTQ==,type:comment]
-#ENC[AES256_GCM,data:WFBpDpdk9298ts38usmmWvH8PnGmJBfVtkq2MN6ppSXl8ZU69Jh6K6i1vBydr2DWkrNEeREFKzQ=,iv:tk7AGdBQkExbFz3FHB/qhc4NHpiRJuYiPb6uk+pcGgk=,tag:9B4ZVADH075+vQymXGs4Ng==,type:comment]
-#ENC[AES256_GCM,data:4x8namrHJIZ4t5tVQ29OKoX+siDtAKr8Zw==,iv:VQHsraKdrv6rumSN0zVCmlgwp2O6Kmkwv4HgCkD9EHg=,tag:VwwteHa1/AGlIeBy8HpMug==,type:comment]
-#ENC[AES256_GCM,data:aAtD4H5gD6gxI/CjizkCw0b0Fecqpw/4/0n9ak7Y0Fkccp9RomTxCo0DYIaWPyXQyZgxJuy7vrlbtGlQp17I6rKKQWauYeGxgTLNpco=,iv:h2G0pwG9OYDD/OtUHOJL8ch1TlWQglq1oxRNIpMcQ4c=,tag:OEnkYbjzrGagb0mvY/27bA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:L/wYOj8HtYTobK8GmBM5klc8w5Fm6smxkO+JG4iRPi83IAKdLD62sn117Amu2d+x,iv:8uFSdkxhscfKi9tADF5xNnBV2UsyMcaBgk8T6wdQ/7s=,tag:kUT+TLPcbI/Aad0NUVzzbw==,type:str]
-#ENC[AES256_GCM,data:xgNtw40vts3jWAn6iwV52/mMJXoLp0Erye8R68G+Yk30wDHtq1YdtKQeAR81EBdGm3+1M2QTtioXFA/XgSdCCoq5kxG6hsw=,iv:dqAeaTE1ubkxEMGVYpQbkNX4DV9yhQCswV2THFc6zlA=,tag:N7dJYvdotUy9eomhmhsqdQ==,type:comment]
-#ENC[AES256_GCM,data:WGux300wwPr9EuSd0JPdTlVFQuszo7Qn+00/StFGZtbpF7CCahKVWzi0SrvgO4mLGmojjKut,iv:DNHq4hKnazAR9v1v0DtdJsUz800Ln3w230MRkM4y2+c=,tag:SDJ/CABwcCN3U9adtJc1bw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:NKy7Bpy7AA==,iv:wZsHGWRxqZJ4Dxi1P2pPFF32Ir4GO80W18eExyhEuLw=,tag:ApBSzw19qBrcrYDP09Cdxg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Xa5NOn4MGWGcbkaPBNkoJG1dDf8=,iv:F1mSdK1aUumY79DkQGP3DSNxiVgTSqT4k6t0UZ5K5Z0=,tag:54Pudja0XKQYmALptEyeVA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:23JmaAC5aUc0QPw=,iv:rMPz5fy29yYtRG9kcSLhjOx3ZQ1Cv04Bl+w+5JsMbKk=,tag:D9W45W/MrUjUJWagW5BR3w==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:HM7mo4dn+Ik/ta5DzDAI,iv:vKx72Rvh43mvlBDyiiLZh4bnaj3mE0vryq+69iyG/ZQ=,tag:Wj6Q9JT+woQRtBNbziD/Tg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:wzn0NenxHyTjseM0NgLQEqHGBMJw6QHLXg==,iv:GZdaB6iauQBZvcNx/9txFVT6zRQLDTBFAcvQCkXWmJs=,tag:PTiypTubrx6fH4wDnTACXg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YLYIfLb+dRswJE8rEVXbt/PRTt6o0oEwJWeDaQuaug==,iv:zyaUkmlikey5tv1JErLrqozHBIF89hDy/jYJBReuIng=,tag:rLKxq+jYM2dILQpivHWVeg==,type:str]
-#ENC[AES256_GCM,data:VZj4NahugWWAAEu/Rr748I2oO7nE2yTUK+YFdHOQs5lnEuguLQA=,iv:5muE+itppm0NKKe3v8BYkk0prle8KU76BX6affRgFlM=,tag:hR+Rc54V+8l03avOu//+2Q==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:/fMQBQqbu8oGxAG5wgBPCAh6kV8=,iv:VOQYyI+yQNGwAPxOmqNpzn+8s60Xox3MhvrkQWIPWkI=,tag:FfyOGUFhQ+lJ3CG2OwHxNg==,type:str]
-#ENC[AES256_GCM,data:9cwQ+X6tXRPuQVZ08zc=,iv:vResZJiZ1CqORYkniaIQHaybsNbwjPmcYSr9K/ivdPw=,tag:s4zoFTtcE8Hqn52xmenrLA==,type:comment]
-PODNET: ENC[AES256_GCM,data:G6ejdr77dVLChBF2+g==,iv:b9hYOSFVbaIOj7GwUKSN22ZulFtdxh4bs8EJqtDlflM=,tag:KA8DAw+Db11qVyU5Vi7LNw==,type:str]
-SVCNET: ENC[AES256_GCM,data:HkvqMGyRISp9QTAfLA==,iv:TnQlutKmdfCLTiB5Fsii0ANFKGcMhvl8nfrNDKqhWok=,tag:a84IGi9I7anKkfBjecbIbw==,type:str]
+#ENC[AES256_GCM,data:ltRon330QYQWkJXaDec1SEnAZt4wGDh6fDXqQwH7QTDGO1AfpYKCfywBpcPcP+diKz3ZNjsdlYqdQSoYDbp24y0=,iv:oxQD3km+eVrOo+AYlTarWIGGxfAOjMD6rmwznW2ufyE=,tag:Jifu3X38jyyiTgdyNLjJWg==,type:comment]
+#ENC[AES256_GCM,data:tjaQh3vsJySVrgQVnXFY+lATJnrB9xx0AxdbCnVF8v8kpnXHr1Ne/SVFIRg=,iv:hUMFfhBxfAsnx4MlFf6HCSpT1iU4Yze2g7XpHYX8hT4=,tag:xg+JwLWVchNvZLc2vwaKHw==,type:comment]
+VIP: ENC[AES256_GCM,data:42T5bkEskUUo65yhIg==,iv:8rTlcABmvsm/vf4bDN4w/hRhsE3iPiWhe+tpKWq7sv8=,tag:/06gLK3cOQdNJK8foD0N4w==,type:str]
+#ENC[AES256_GCM,data:8jot/vE3qWf0c/YtjMowlHkaQ1LhDqIPmd6c,iv:ZLrOjQ8or5M88MpjnxdwcfAWmE+pfeMLzjfM5nC3PdI=,tag:afpWdoiQOkWxAa0US53q/A==,type:comment]
+#ENC[AES256_GCM,data:i5ufoMuhGTYSmZvjSeeBw2niBfRYao6g+ZuI0+5jwGGXZJ8kTf7JdDcOl5ziq0mXQza5tpoILZij3ibwRlu64M6Fq1rwIHm/BhBFvpyqnAqTTVLXHZzK6gE=,iv:GWxFPMfuuerwzoe7H31GY/eiS6/Jt0ekEus97ecKo3I=,tag:SRwENlHBzhDPVvmplSCkzA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:aq2fQssbcOcxVD6X4Go=,iv:gaZGmangiT/y8VmpnzRlMsmxslsbaMxYx7FU/Ckukkk=,tag:tCeUVg30UAtbi9SAdqa2+Q==,type:str]
+#ENC[AES256_GCM,data:aP/J/wsiMy4V8p7PeuH3c45XdstYPe2gDUdM7qcKktPBhg==,iv:4z3382p3CWFreR0sDlsm9ju/FAfSQoREtsFFWI9tyhA=,tag:Tb0+Q4ZzgdIkGq+HzX3C6Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:9M0r8NAeaWmkN+1b1g==,iv:LGbQlqpRUEucgdzUvbBxw5txgUUl5LbwDERrMDbhHmc=,tag:K21HUmI4CzHdQ4UzDx/wKA==,type:str]
+#ENC[AES256_GCM,data:oSsFrVBL9O5Q5h//X9g4dvoMPKnCUhLgVU1MYS2RsztLnEFXZiFzSJ5dWavo20M=,iv:/eZ1dOnwz3HB+sc0V13j+ca2eoEpxJPrLutsxkSHz7Y=,tag:8dI2DCLdAvibCSEYnhk7wQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:qjcoglNJP8rGpyzuTn7pLTHstl1lKuFIm43rhp3y7g==,iv:fwNTa6BGFBFEmo9J34c04m1Xxihxg00uUNrJ5aRhUrg=,tag:jWKL2wcor+O09xuTLg1aAg==,type:str]
+#ENC[AES256_GCM,data:DVJbsTfmt3/WfwpFCYOp3TfnsFswdDp/Myi9KfrebjLLruXht04CxOBfY+06uUqJoHm8iVs5B77uYU+mDnhAL66tF7sxYwB0W0gsIB11BEIW1g==,iv:BU+SpsYWRmqspZzGDcOI/VuckIr0ubjoZcWD3lPHBv8=,tag:DqAB4uZXQpnaGSTUT2n+Ew==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:oQMgwBHahcNMpTi7ovUd,iv:7C2nF92gn1O+9vBg9ow3/91qhGQKso6snNfBLx/LX2s=,tag:V/jMyMzMXiZnE7GjjzlXFA==,type:str]
+#ENC[AES256_GCM,data:NMX2yON0PRkqGNzZ1/aw9bqamwc3ULuDri8a1+CIImdM,iv:LJyfnLUlTAkNEmsZ50gtJNl+zzR/xxIIqukiZ6/44FI=,tag:fr+jL/clKSavQW+ehILO6g==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:3LJ64jSM5lb64R9y3lAM,iv:+qtekZVJbgaKOLTAk7vAAoVvqSuuYXssZHrqP2zFk/g=,tag:7hz7n+oFtTic+v/j+zlRLg==,type:str]
+#ENC[AES256_GCM,data:Fh/I22NTuV84utEPx7IYErmbgo0twtGC8OTFWXwT9wjStE9/x76ZdsZ1/UiY44GYBLYL7C1d65bAq6FukH3PgfLle+Jpx9/MaBDVKvQrGWY=,iv:b/JPF5x2/2AppSZO5fEMaZur9MxEA4jxdewK1HpCCIo=,tag:kNDF6OFcSstU95TAE+LaVw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:EKy9LWq3qQhkNqmG4NW7,iv:t7vSozxi9NtfXC00jORSmjREoibd8yUhwPuXTI7yjps=,tag:8tU1lcWt1xMXS7cWFwRLtA==,type:str]
+#ENC[AES256_GCM,data:0RM70yzFf4QWsGzHNO26tw6rMBV4qEYCk6y6NEuglv3BVm646c2JEMkfskFGYvfYO1eHcTdACutuLpCF4hayCKQaET+yt4mfB7BZwR8gr/H1wPU4jVL6,iv:nvrCS/cGyR8jiecKw+RIVZ2BAp5+5ZSjArfi7wulFfM=,tag:KGakdC8ZbhioixlMdt6z3w==,type:comment]
+#ENC[AES256_GCM,data:aE9jifndR9WZreGiZGBf5DRD28kEoJ/Mz/CdBcstrGvD/ncpmgwKC7HgYOKDMSJY+KzCp/RXFqZcCFxOmZ1YZYP6YLv5kMNN4eV0gQcSdNT5KotxA04J9eyF2R0QJogD/QzM84PmcyG/Rl7ulbMlHt0CLMTVqR17kL/+Mg==,iv:2jLWh6QJNWflHAydituIZAXj3Nky1ss8YSYoscJjQFo=,tag:3jILwe3RpvHGmNHvpG3WLQ==,type:comment]
+#ENC[AES256_GCM,data:sDiiD5TJcD/836Kc9BcBBZz+ea4lPpTx64yhzBiPgrdAlG9navv39T/XwMnr7EPDogGTkAaZupyZAhVKvIvsMDo8f/ZbXxRI0AbUi2lKj9U=,iv:g1SIjMeCOook1Kx0Pm1VwfXsWOYwUg31YpTz27H0AJo=,tag:TVhlo9/JPgMfEOvW810XOg==,type:comment]
+#ENC[AES256_GCM,data:Eu85PBNRN+424NCiiEg+3shAV5P1il0yrMTZbNpyROKo0QTuf4fa1ycBvSxh5iEE67ptEUP9,iv:sW1PPyv9TVSeZ8apXgTSe9GvQPZIzQAblHWpJrlImRA=,tag:q10G8qwz0DTSy2AWxmE1mg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:ZqpKfg9YDM8yH6jq,iv:dtMghSIXr/4/nFxnrZ3i8WxiWAsfkV8r2BE6gO5w1tE=,tag:Lv6S3nYeq03+IAj1W/lUVg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4NnNdP8h0zKTj2heqy5aLFI=,iv:tiF9B5GLMpLikCUV4U22SYb/e6dX2YjiyG/OrqjlSPg=,tag:5eiYxRsrlooJL1S85z4UhA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:BofbcB/lcY9YiI2ecYikEVe3Ltv+Yx4mvE+ZhRN6quM=,iv:T+XdzANdSwiX93q6EXLfuYjII/zYbA/geMKOxbucu2M=,tag:cWYXX+Sy3ND26DN1eIBR7Q==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:nJwJq+XMZSTSnvmqoHKrfKv+PwVkz5lTSjCJqNFeETtAd0FACu95iw==,iv:QNpmsyZl6t7nPcwgDLNLk2Rry56O9nncZnU+Xm2nXaE=,tag:fseRqW7ZcXL+RszOG3HWKw==,type:str]
+#ENC[AES256_GCM,data:PP76k6SOHN4TgCT1V3hxzA7DNeMIMwG+L1BcD/tWq1KkFMLp1x4EImyZDA5YFp4L+/S4agnrTjyjS6sl+tomdg==,iv:6cI3QQ2fIxY+nsb3Qfe+oXLCfR6lRYxo90M9t1inHLc=,tag:pKNeN85VCSgrBfzPh+iYDg==,type:comment]
+#ENC[AES256_GCM,data:Zit88/YNBXcaqW3/P3FStlcdwmTxLMSWkyRg2NhCMujEodJAmkTkBX2i2BN6EfNniy8ANe3riPI=,iv:xXGcBrRAWX9yaqyYNcHBWD3bPjmG2ecneh5Al5e8OnQ=,tag:i5Rnh4Z1I1AHM0tux5/djA==,type:comment]
+#ENC[AES256_GCM,data:upmBs6ocEGPHc5iKB3Yb9mReGCL/syHVxA==,iv:58PfK5kRNcb/Ua0FHJcON+BUr0PZkbR6Mvi3Hv8Ip4M=,tag:Jj1IzH1T5Jahy2xGQvtgFg==,type:comment]
+#ENC[AES256_GCM,data:xNj+TlJAqAkMmzrkzcMZB/pyrhh+EXp6NfVzX8f/ivVhtX5e1KLHHBtw98kdGQKHS06O5pQZ2p5ADf37IA/8EbBR19dg9ILEWKYKGjQ=,iv:YgcKwGrb1xtJ7U3Oosahegc9gYDXzpQ6z1QrpOt2DwM=,tag:0D9Z1Nyar9S5PU2wYzILtw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:LEyo981tLLobwPYAIecrP8ST8jy0ChgDhYZo4VyomYsVNH3NSNfxdH8/xE5UdhHM,iv:mqfgd3WenjXEfPpDsMAZ6yZ5XaAwl+CRmgynu4gCF7M=,tag:5MWd4aSxjMeal80ZU33Eaw==,type:str]
+#ENC[AES256_GCM,data:DNCcIaZjMLRuTE60BIBzRr2UuGH4RuMIk1WUA6NevVUrYRee7IMJ/gcik5qyhK5tmpFbjREcBhqM5Xz6IolPIwYoXCGewaU=,iv:lXYjRtLDf4qjBD++DF0zdzZ862Zvagzk0H3YoRyd/vE=,tag:p3VCI5cb3SQXxb1WmbRN/g==,type:comment]
+#ENC[AES256_GCM,data:9kEP0fnwswWFfM+4274yzGhAxg9skAU/Gq4wqGOnw4oxekxQskvW7dWu4eTnD+iG/ZTX4ZiI,iv:6oVn+s5k/batz7ybIZdUVHqIzcKXlUJq2o14E/UAeWk=,tag:s5PrOZfcajSFmnxEzfLv9w==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:gBs9aS4Erw==,iv:b4Eu5lOu6zPJjIuOMmIaXhZyGmJM5Y1iRurfcVlADkg=,tag:K5J1hXvCRVSPv4uzblzVUQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fur/diP+7qKP+Hn64QekXOcsDgs=,iv:jgmhg7c0Tt3SQs+mwKwt6SgqVMoA/V9OENhBrCRvkkY=,tag:BFCtKi+/Mylb2RhDZkUFLQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:PP74yER6YKj6oE8=,iv:xf2UEC6mufhZ+gmPAr0NWtdKgeEt9Tn4Aw5cfFAfhQY=,tag:LHbp3wyTdASjUo7wJuIz3w==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:9uUQfN8411Xf/jjVBjqv,iv:0mBZXLdDQ0biMhgmKx0jNN88IrHhzzY9wTuuffvWHIA=,tag:eFiXXWZcM9c9/Ou1Kh0hjg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:WbIzq5NIbwcv2AtAo95KTiCXFfibA1F7SA==,iv:duIKnhY2Fle5AI/C4VCC08f/CilTIo3CyT9HDwW4ets=,tag:eKzdStnh2E7+j3d1uqXiUw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Ng0rxNDOMuXeq5PUQoV78D1ZTk1ZHVBlO2+dRlpznw==,iv:UCjCIvqIB5fu3F0dq2B+9ePn2/tVWQXAl5GBkobXaUA=,tag:vU11WRQzMfdZR+8huAs3QA==,type:str]
+#ENC[AES256_GCM,data:0PTaGW6RAouj6ihqdkRR9kOcP+h1NPExospru9X5peZqE1dt+64=,iv:6xrS9OY4COm+0vxTM/IzyrXF9flG31BJY2kQnIxBt2w=,tag:+8eAdgjW6InEEsZhizRDpQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2LE42aCKBXUle81elQfbmvygYU4=,iv:eTLeIPPtj++qLAYUtBYrIo6dahoA40zOsSVmOUq8F/8=,tag:xbvqKD/9e9OIAZB3XmPW1A==,type:str]
+#ENC[AES256_GCM,data:zIXWEeTT+FFeOU8ME4E=,iv:AkfacwdknP2nDLsRte3LiWsrrFMiKk7t8GqBzBZEua8=,tag:njSOzjIPBI9/jhyXmj2BFg==,type:comment]
+PODNET: ENC[AES256_GCM,data:C1Tuyi39cfT+G4Wbaw==,iv:D4XnpPav8E5YbgPWrVsVnwMeQxkvjzKOvg4j3PLw7YM=,tag:HWjMG49QlJ5XJDWfhLUniQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:YKC5VEqL/CPv+5ZyGg==,iv:BwyTo5X3K3G1jr04aHW1TuwFqPjFqwR/48SINdmez3w=,tag:9xkwN5uP4f6duSprSllfUQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhTjR2Q1J6VWhUSUdtV3Rj
-            V3BGdmQ5MWtwckU1ZEVqQ1luQXRITHZIb0Z3CkNLS3BHaWZnSmQxOGlIM3A1NXps
-            N25jNUlETUFUN2ltYWRzUm4yWHh3bWsKLS0tIGJDZWpDRG5xVVRKU0d6RzB0OVdT
-            SHkvclk3eHYrRW82MG1hT0JzdFFGbU0K+pnzI6qyyv2mxURx99w36zdjKy1uIaMj
-            BxDy7a+A4Hm8kBsrb/SJgsnSIIh7ycyVYtVyMMXig9qxeMRPKtsFvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnRjk5VDVqa05GaVpKQmVI
+            eVFHYUd6QTUrTFhnazEvZVFJNmdEMXRQVDNBCkxXKzRJbHpGclQ0Y1hZQmFPVngy
+            U1l0QUxBZVZxT3JYRUNMRHN5OHFGQlUKLS0tIHhOY3lMUk9qRENGa3lPV1VrTlpD
+            WkRmV3RpSmhkdXFQQXhUVkQwQjJVT2sKtZNkJLQdRt7vdvZko2UlvayI6DZlQ+iI
+            ZHRgqJQbPGlpy15aAhZUcoYj4nJpD1ItNiAGcGZTgyPYytrhXCOaeg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:26:31Z"
-    mac: ENC[AES256_GCM,data:aTDvHBA7s2qFt/cGwEyxGl1Ai9EaT0KqvhrazVhQwdcs+0Qg1ShzJ5AssZLvkA5BFtnoODK1LPcRNSAM0y0UJ8E/IKJVQEHK6ax1q0zQF5vhmhmzApV7ODa2XRCMsRoUv2OQXhg7DanZOtjzqc59T88O36RaH7h8nfN1ViJsUXA=,iv:viMTWF858NFkYWJ/zAxogoMbHAKAWNlTMYcZhsuN2FU=,tag:DQdSVPSG8BorO/dmmjr88w==,type:str]
+    lastmodified: "2025-01-19T19:28:17Z"
+    mac: ENC[AES256_GCM,data:TWUzJT5DEfOau1dGwlvXyAyGtIyw0yKpNEbb9G1hJ5dSEbzT4CSyJc59EPvQyN997fhs1XNVDif4QEYE+pYi0csYFBZoFHwzm2C+uM8k6bDERLrIulCb0o3nz+9iLt00KWkZ24qrURYEZ3Lxyv6YobsGB4gusovfVzk8TxUG0qE=,iv:QavcEXd4ePxZh5PzD79lr7LwUecFOfVAhtxba7MiKss=,tag:fW+6Cp157cz/2mQfHp+Ktg==,type:str]
     pgp: []
     version: 3.9.2
