--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:DiynjW/BfrlBmzlBV8Zi1bjWmbLIEtUEWZq9R/VkcjoCi/izUtN75r+OFFc5o1XyI00M0QKmsUVgtTvz9fDnQcg=,iv:JCftS4pAemOZ+U4P5YQZ7aRHlrnyh1ces9yDyH57u+E=,tag:VkeE/BuUskdrWwG9yjjhjw==,type:comment]
-    #ENC[AES256_GCM,data:4lJU9frlTP14yPDB5oMu/7VioRXg3uxaW/GxOi2b0F7KtVZYwEj7Qg+Fb/s=,iv:JxzaHlIW3iaqKkXU/DPRZ9KAfEFl/mFMwrt5cVddnyU=,tag:yRThYcFnXTSlaer78Odfgg==,type:comment]
-    VIP: ENC[AES256_GCM,data:Kwfma83Vp3T/SmMJRw==,iv:ZrDTf+nzkB6kvbCaDQEF9IgBepGVJP03eIeY0rbPZqQ=,tag:lXmhtSj89nC2IgrIw8WEhQ==,type:str]
-    #ENC[AES256_GCM,data:ceu++tMEuLs/jo0Jo4taqcPlz+/jKD01U7UO,iv:SDAW5lPyxp13HsHP5F4pvLBwflGwZz9EtIo0ZD1FH1I=,tag:L3Hx7/2tZyzOyBal1oaFUg==,type:comment]
-    #ENC[AES256_GCM,data:H+oyYA1v2nVQytErk8/de1ajkxqm70tTSY/HVvRCCCmNF1sR/osXhCW3wPAqNbaWkIKxj9/av6bKbSg2RBtzBaAISypFi06fv0gzxQkgro5GcHDOxO8bmFA=,iv:MkeoaaKhEQH5lCB+P5SAg7eq5GQ5B6fiPCHqIqfst30=,tag:+coI2UNLGToB3fiUeIclAA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Q2EvFJiZj9Ltz637PYQ=,iv:1k9bsPG95jZ5OHPQM68Qsv1FRzU6EEch+KvU14eladk=,tag:t7kjS6V1T3GyZq6GEbfGww==,type:str]
-    #ENC[AES256_GCM,data:KWfFs/bVhno9nzoYbWMzZWx3O+LNEuyg7TmO5Eum1Brhog==,iv:mgNvYcqJapRnxHRH3ZcuDWgLZ6PamxkJLKl2A6eUuF4=,tag:hPFhh1++k7T6LzBtYpj7vg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:N0Q+61Fg81N5K+RzmQ==,iv:ziFN4ZugDj9bn2kKLYXMqnDkesLkAZvCIix/qsxqDVg=,tag:GwTtV2BgALbTuk+w6+FUDQ==,type:str]
-    #ENC[AES256_GCM,data:wLjxkbJcMKzlJbsaoLNNiOJBdPgzJrlzeIzcFE6p8rLO9bwgzNHDG7T4CO2+StY=,iv:3MvE829zVMKUZMqoryp73UN4UjuE2gI65+iaZUPS1Kk=,tag:7PR9+Iz7EvuRLRTlUjzg9g==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:C19jJnZr0g+KOxk9thgSU2jw1VP8jq0b+TLqq8873w==,iv:/oVgRUu/HK71Ij6xmoBePbQRBoLCb+GdiU2zBvgzrOo=,tag:QZ4JCeC4K/XPjCehazNxNQ==,type:str]
-    #ENC[AES256_GCM,data:Uq46J3MOpPoshTwDkywghAWNNJih9axnWVuew/Ou2izAQFkxlMKeLgXRYOn4ir3lPmBEtXwkaWCY2goEyCu11W67lkdIIb8CHV/bkIVFgers8Q==,iv:rMo8AsHT1aUJ5rDEe8wIFUi5jBS3MzbZupteSdGWGdg=,tag:pljQJuhm+rgdEMzOcsVs5w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:cnzvbGNHVxWiJR2gbDDf,iv:fwM6DMuN3AQW9oGgA6MS0P0jozNERZV5Aj2D1gtDkvQ=,tag:gxh7UZVd9xYTPBys1OGaxw==,type:str]
-    #ENC[AES256_GCM,data:1OMv4h8uffQ8B/16viJs6M4qE8mJKYm3/6y0nKF0bMB/,iv:sO/PHnFzN1zZiaa9RDGJS0Wndk/JJ84lMBu1XS4QI0o=,tag:5HXJ/jmDn0JLU0AmDVKUqw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:3/nG/tnLICJKq6L252Qx,iv:rUr54+n+KFad9N+zqUaeN4S9DDlxzGDOuPgPyOlUnD4=,tag:xkXJpKUmY65zbIKoNew5Vg==,type:str]
-    #ENC[AES256_GCM,data:xt1+pVEP2Kokje9DGjjm40YEJKiB2zRuGAwj19GnPjfIn9DcMMSx9iDdn7lhWJUrd1kKtS1CkN8UGVDeapMDE39KXtLmQ606nKijjxEJrDE=,iv:bXYGNaj6m+9RqS2XqNO0N6Or4nbZrICMTLLjx+Xyx0M=,tag:v4EECph405A+9T/bn1Tepw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:IyScSOQagrZsh0bOr3Co,iv:0E+Jg7AjNjJHOngJZJN68ZBGRNDw5AeCnBJQwC4G/LY=,tag:Wk7vw5j9DlvOuUoil8AVYw==,type:str]
-    #ENC[AES256_GCM,data:D7ia7rrdNKrOdz0yED0MuR6HvH4b2fqK1vuBKF/Ou+a4NzNsq7NUqpPJ4NoyNZjbhxro5TJ5D0RkZgBIfjMCNs2TVy/LITN9ftrGRTNMj2AiVXOe/yeK,iv:CAcWxoI5AWtJBWbrmeZ5gVwlnnvL6LmI8J68uJ3B79Y=,tag:aa2wDmmJbTxc5wUL+zZtOw==,type:comment]
-    #ENC[AES256_GCM,data:Jjcdvfrv24hBB/tUi5JqwWcT+h3f6f1OfOTzgGwCFPD57qT7KnKj0Jgy1zl/pLr2qtGOSPhYji2w9XPXevyHcU47XPFb9g7ODHGLRCWlER4ikkpvsfqXSpiPSA2rHVGoM3rqdMCAZRQ+F7dMyLqnUgsQp6Kp7W81c2BBpA==,iv:JRZ9uqKHyXw6vV0DF29qxFUJ81sqzykDZCCsH0Vhg48=,tag:4Murr02Ex2UtdvVb85oi7Q==,type:comment]
-    #ENC[AES256_GCM,data:hSVL2QfCWkNl8ZCzrTzqpZXLfPoeUvman3ddI8skdZ/37Fad29omlUTiKKE9Z7YCkQjgPOgEduECoApCYoaPRCfgvwxzjPht930xJHVwwq0=,iv:OjMdS/M7dEqOHChZvUnKlvrZkrgXqH2EwU+VzbeQvjc=,tag:xkYjB8eLkoHigJM4RM6vbA==,type:comment]
-    #ENC[AES256_GCM,data:z4EIYXbK3euSa94agwqEz6rVO61YdtdZd4PY7pd6Tux3vwDvxkWpCEB4roRwW5VuCZj0IrJD,iv:ehM608S35oqEIxJqMvY7glXS2qtps1uechRLJAJbx6M=,tag:/eYIlYn+2oxQEm874Z6lxA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:zG8RfS9Tl4n4c1Yy,iv:pnTHgy0JI3bOyrlOZm5ArMj5WbqOBcgwln8sadr9dPU=,tag:GbJOIRBSGbKPptJW6i3bBA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OnddH0fVf+Y+QrDGNZz4F8A=,iv:kUwIXC22DmvdXV1Ht0IQJcgfcwCPKT5IQhcZimCfuHs=,tag:w3GvUjiBh+CojV5SJUfddg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:dnhXdzDe+XN6VK03nshiUmgJ7rVA8/xqiUAAicsOw+c=,iv:ITYSpqzeTXYpxRnMK2HLaw4EeXc5U4wf1iBkKDYPDZk=,tag:8wjkYztlaJ2MPTt91/KFtg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:hLKlemHbwHmCsB/VTZCuGjGpDMTHzU52IZzIJpOF8ifzUJiZXLUYvQ==,iv:yo8M74vPT5NhgvmlN34Auofi5n1S0/QJwrABImsOVNQ=,tag:i/Lt/upBUC0VmMlplxaZbw==,type:str]
-    #ENC[AES256_GCM,data:3mTYo9NvwVV0uEIgqcVaU9V4jJtt2IKfmEa4ZaJoH7z4N2C2ovH5oorLRTYeMak7gSdM3umETCbWofV7NLWjTw==,iv:aFIUY00nl13xykPZx09mdxTgIPjOY3S0+kr+vAK71vg=,tag:1sQgyIeLdzpaH7RAA5jBuw==,type:comment]
-    #ENC[AES256_GCM,data:HI9aPpHY/jLbQqfO+fpCKSI7oWWZLvoK9gNSCylpVOebUV/31/qQMtOrlByV1RDxSl3hF1/QQps=,iv:ZtxqF4KMiCgAB12vx2gyrBiy7fCak5Or2G61TyoBMgg=,tag:PvKhSCEAM9FDTpSQWRnh2g==,type:comment]
-    #ENC[AES256_GCM,data:6NhZjF/9ndssdbHkWh7n8k8XOX4w92gK2g==,iv:mKMzadkz6PkPpFguNv7jWCOL/yCQSgcvhThhtU+FGZo=,tag:rZhxloLx+OA5Kw8TQGTSiQ==,type:comment]
-    #ENC[AES256_GCM,data:AW+X01llrRSyWnrMPiVMi3D6qLnrPuV4FpwUW75onYcj1tiK+D+8/7k9rAHY9VqbgTYwUnvM39UGDXRGf16txIsRB6drxRl7k/Ir1Pg=,iv:kvUM+wlB9/+A8xgqTYvH8P0LyvKQ3eVPK+/PCzlmZnc=,tag:nrF4lWxeWRdmul3V8ox24A==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:7l2rLwrfsOokBI6onHRsQL93MopUJeYxiDeW234Tb2/z7Ih0Ak/Rs/DCzs2gHDu3,iv:G5PaCuIB0WMHINZPQDEKuPICUi2/rHNju0wEiZql65U=,tag:6w/37Jq2fj6UBr9be13Sdw==,type:str]
-    #ENC[AES256_GCM,data:QDJBEjWVU3HfIyjhEfj9win6ZVL01kD9B0tGUeNkB9DBv48UAAW+k12VH8NuvqZW7Xm8+luMJEVTFkB2eZ/LbWr4qatqxIc=,iv:yTm0kFNbnEL8TFEpSBMkA/wANpJWQZAlwbKxp1eI0UQ=,tag:E4Sm5vMA4G67Sz/IZ8C/qg==,type:comment]
-    #ENC[AES256_GCM,data:K8+FxuMEroSQhO19yDkLata8yrlwrmX4rNlhTEESANOJNmqHRqQqzCUy4W4sqM0W3GhaUzbb,iv:KMpLGGhe/UDBNUNQ+Ruu5wIDLGfZi0oNweTSfPWV2ds=,tag:PMAtz2VYWzp/8/QGXeww8Q==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:74dI0OTcgw==,iv:15/gt8v+fGNNEzCO6r+dbguJGL09hRxa+Vb+dYX9FRk=,tag:FLDuKwsOPxwd3twLGVoVWw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1XTWNb83GvPTLxkYY4GXV/XJIww=,iv:VSNqUBa7I8oD4lsv6fvlxxb8VrB5MqTWH8vFm95qypI=,tag:1rNYP/LJwl29M2dtvpWRug==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:sa5yq2NXanbeN88=,iv:NviARjKxGq1tGVX8O++AfPpr6l7NLiSqoa41vo8TAg0=,tag:NjfSVZvOLksh4gPXG44iAg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:ib+GWysAUF8+xR0kvSOV,iv:npD6iVkOvul+lkg8PXs6lhDncEXFKmnAddFuiuTI/34=,tag:PrL7M/0hYEpeWAGgMGKTlA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:FSfHRUnQCeHtie1EZYJfxvCTUYuuIoZk4w==,iv:TsJDSJYlGTkdehyfheFCBq6Qsi6CTSZ5Y5KOD2Pls8k=,tag:dvd85/EiWAxJyQegjNaidw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:QSLIeY8lnB9ZxhTfE6e0szzXkCkEEP+aeynr4BxDNg==,iv:XI+aUde5Y4jJ5pd8tSdnI45l8cOhwUhC0oKKWxxVXIM=,tag:sd4GSnRD+ZCcvcIxsKK38A==,type:str]
-    #ENC[AES256_GCM,data:sEsiyrOy+HYt1SR/EXqXifzvFYID5pm8DHXDyUqnzIEC8uAk4dU=,iv:32qyhUISSpjs5Qt4LgON0NUOS9zmI+4k47qgO1BITUA=,tag:QHeUoAe8z4nKYSWHQgCSqw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:G/Yqeee2xe/nnuYs///nGssBRcc=,iv:Nu0bbrkdj1miH7GUVp/K/+PZGzzilp4aGbT8ul/sipk=,tag:v90BSyV5g+kTk5Df8gjodA==,type:str]
-    #ENC[AES256_GCM,data:oGZIxQBX8D2GN1mAbCU=,iv:Lh0HGZCSuiNdmS1Z0IGJdqIDs+jX4PPC7JD645B4Qa8=,tag:KgMjfMPYHYTCY+Fy7wgMkA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:s7lBioP/gJ3ZlW/NkA==,iv:mlXD2IIo3buiPFbwucfnYE4Rb2+dSAdMyURKLJhP00s=,tag:QoAVssn4v32S28H6uF5M9w==,type:str]
-    SVCNET: ENC[AES256_GCM,data:/OdtMSp4JRtXTvw3Ig==,iv:rLxJ9o3W8GVkQViYXJi6cVeY+bIz8RevImFOClYEmWU=,tag:wcWh/6mfHrtpIcMXZiZW+g==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:86oQbQ==,iv:u58XrnzNuc6vU2A/XwZY2DGuuqSrvsXIx0KWnIqeGGA=,tag:WvENGaFYH5OtFMSpteljYQ==,type:str]
+    #ENC[AES256_GCM,data:pXIo8McRpgRWh3doC5392zNj0zuJat2xIOWWM9aMARBOJGe+rNjuKOFhqtMWd1rr2kmKA+NMmw4wBZXdyHePShU=,iv:cbHG29mYByHVcdfQH2zb0ctN68AGEYC1z7RnN3BEPBQ=,tag:6xw3N4a3cnJRkQ7i7Vtryg==,type:comment]
+    #ENC[AES256_GCM,data:z5CHFR5eb7vgle053z/lJ7NBVUrm723TYmtr1NGnsowH6I+Ynitj9fmCqP8=,iv:NrWJsRxXIaUWcufVnxevRVx/RwJx9ztELLGN0411zao=,tag:kJL69uizGBZvRXsak5xxSQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:Ll+L/Ln0pHSRBhNU9g==,iv:uvqNIdQFRXb688kGFtj6MM3ctSENIuzhdGUuZmzSP3E=,tag:SF1ikZfE7ScSyb9a85H4qg==,type:str]
+    #ENC[AES256_GCM,data:BWOczbuSACBmECsNOZNX2qiTAvzPztchm/WX,iv:0tJh6crJBUS8FeFpNZ/6yfaos2XWCHeOCByZxSn0wxo=,tag:2lxmbdrsRBByFIOlMm6/MA==,type:comment]
+    #ENC[AES256_GCM,data:5vbs45ivjOY/zZtqd+rDDXJoWoP5egiB5VJ6tEihqZ7IXcqtuvOLcr5ZATwP9+qLHKAY0u3Y/1n5JvA13QQn4PTBLJltCKUx+oCZ0HQSlqpqJ3iyMnSK0Vc=,iv:S83NDRAxcYyFrbkynF+QPBwgLwoU8XDedyyAtPd7vYg=,tag:81Qain4sAdYgcV4dp3ZYkw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:H47MEUSk/F8DNJezH9s=,iv:X1W+7oi4bmmxsRU7mWpUccl4FixFnzslKPJA4GJlYJI=,tag:nNnUZt+sqC3OKAThEdY2UQ==,type:str]
+    #ENC[AES256_GCM,data:Kx0ck2LH8g6CnNNyu0wIMxNYyiapJjf8HM54sx/5TDyGlQ==,iv:khxBxrB2ZWR5J1OC3SzMipFWf/hqeXkZwXg1Xw50La4=,tag:xqg+XFdmw9nDvp9CIGqN4Q==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:sB1KlhRTNjMhKEDkag==,iv:Uy6vscETZMxs3qVf9cmdBAyarleaSaQhhwKE02ErT2Y=,tag:jGR23G2wKfrDGWNRSu3I6w==,type:str]
+    #ENC[AES256_GCM,data:5WETsZJ92X500WHcj96cvt0lpOEB21SjS56M/OCo4BwVXGh7DVkoE94gWx+pLtg=,iv:eCsKYDY9XDUBz72ZlYQODSc5yqpXV6FCYS7biYgHByQ=,tag:ezfXiRhT8XG3p0ZpiSVLZQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:H9MFAgOOCyNV9abq+v/lpl9dNg8COPNoLiBW7/OokQ==,iv:eKpb/7AUZgSiU1sEno1s5ldTpLXmzAEV88Y22UiFyks=,tag:C4uQ6jtsH9tIGPDjHr/TAw==,type:str]
+    #ENC[AES256_GCM,data:HidTl3mZcQVUSst04oB8o8FAkoFmKFvCpB6RqVkkpPO0hXOFYq76YFrQb+vLWnCLGrviFixpJHfXIqBSfpwMZIsQv99KWcn+kKSD2xMQXtg5cQ==,iv:O4PXGIQQZN/Uo6z20u93hLfqfjpqd0bzVDpSIgiR7zE=,tag:H3FMa0QQ56H0hxFVHTMj9Q==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:HjlRPUee2aMDk1/qjoD0,iv:63ofOju30U+qoNXf1D8Fi3B/1AlTQ6g0N9jXWDSbdEs=,tag:gCJxhAgHtqCOL62tEnc6Vw==,type:str]
+    #ENC[AES256_GCM,data:B/TAaLNQLWJe36Iku86o43RcAsOD3J/lBHmO8hmDuZiA,iv:TRD0LDl8XrxdPaEPSK9ws2ZMpUapZda8nujOiegdQ4Y=,tag:U1lCRhjf1VxmNdt7VxtleQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:og8dOnZDlYSEcSySgEYt,iv:PIBP0KAdgWQRiE8yCIlEfaS4rcKsI6bK3YIlVLWoQuw=,tag:crfaM8pYh9ziMymdcAg+4w==,type:str]
+    #ENC[AES256_GCM,data:mYJspQtTS0MzOEzepGhPf2v0J/qsUsGy4SaR4Zp0yRL313MWPitpBQXmyhFtyzPIGimgjDEGqIhIwwXLdpwVWMWlHrrBoC6XSuYDyGrgsYY=,iv:Cl4rOHyoujTwbnSB9IhhV1Sfs+rSMvFId9Ox/nJNlK4=,tag:0P9+WvkhzJMlHlIJb/lWCQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:HycjS1NQrfpLkiAePQ2w,iv:S+qxQg1X1dz5Cq/6Velr3Dv6PLMMPwxMjOaU/0LzpvQ=,tag:MZhnavpdJBon6uhxd2XjSA==,type:str]
+    #ENC[AES256_GCM,data:WyshHAArM2AcLL33u4H0Rz5fdA5Frfgl98Qf9TiXCvdF6yMqlH3pEgtZRl20Luv7QwJICEJABscpK3Cbd/FKiv8rBe4Oj/XwAV/iCj/d7bMZwfOy184b,iv:Owvyt2NmpynYvUfuJvVMCSRd06XiG4zpQ7L8FAwLu4c=,tag:t39dzNH0DrRhDzt7Se4QZw==,type:comment]
+    #ENC[AES256_GCM,data:EtFvSAwVXG7ltMxE4JL4vSNB1ImQdU6teta/o8zF/5HtZvzpUHCu9VvCxu5Nbgcl4tCHxQTf/0xerIcImSoNUGkaxZ1waI7wXXdfUNsajG10vGEX446gqWJnwlGa2FX4XIpUWengW0wHdUx5OIca6jB3Uvw7WUIJ8ht5Gw==,iv:1soRyymQlZsW4md0sTuEWOC9qC7qb9iY9/B6FhipTIM=,tag:wyLjSQjaUtp4pzWAeO1zIQ==,type:comment]
+    #ENC[AES256_GCM,data:/nz5RL0WB1hze9rQnvZknVBPYmUAmb5K7GWGIppoelfLp0Y2ro6ZMZrlj0irIAActST8Ko8yG0wz/t2zx0pK3LH4KK27VRREg9NWcpX4OC8=,iv:NeAvgwS46VElMA/a8Ag2WK9+bt6udGWPyupyJwym718=,tag:6tErj9VvC2RPsVh699agDQ==,type:comment]
+    #ENC[AES256_GCM,data:8/K15/UQQP8ET031FwQB7Lv5PsPnB+LUI4SJxMKrztBjT3j4ZEi3BtwDhfImDBUPVrHVPpjf,iv:hFjtI4GpwfBdiRdigx+MJY0jzo0Fz3QvF+BDnd2K/0M=,tag:873TuplS72Q/RiYFuBd13g==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:mulMEZgmIdMOh7xC,iv:2xEQONbFbZ+/beX+kBTM08m8/G+mLqyWo8cVJGCzyyY=,tag:6mhbeNfWEpSoYJX4WpU+Jw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:+cahiN2kPKdtJn9G5r8JEns=,iv:hj/yClxqlHdJ4cij6A8GlW6sTZTEG58A3YQ26BgPItU=,tag:qoXhTYrSrkqafvdd3ZGq6A==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:gzQICDrGcQD8qWCWXDnxpQmIJFZedcQ62gvnTf2B9C8=,iv:vaKwiDX+QTXlV0UX+Tjz+ZNcvW9zZcUoS50HlOt9FKo=,tag:BHTNFPQWvt3vKgwqL45lPg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:DfZ5mXqGSZdbn29guHqJ5tSmRxiTTauyvT2t1W8Ui15CnLRlneEGTQ==,iv:L9PqGNzxaaqXdyGxWtA+cuMJMj+1cjGnT/4HktjUdbs=,tag:iHXpQNiASvMVjY+C1dXcEg==,type:str]
+    #ENC[AES256_GCM,data:C/54SBlCwfo9PIcmYUnWHE7GYBnu8tJ8Z+VR+QrYK62as/bYhZ+Mbyw0Fnpajd1QbFXyRwLchJOj6JfD5isxqg==,iv:nT6wsTGevihH1Tu17y2W8LLW0q8gKzq1pcK9nol26zg=,tag:oHCVqp8kmQOq0+ZnGtvbiQ==,type:comment]
+    #ENC[AES256_GCM,data:IA22j35ewKdKuu9GAVaQzjxN4KpMm9QJdKNwO/qc3ynS6aCiuJtNtFucziNrl9/pPDXIxT1q7g8=,iv:U6IYh1sCJYUz1/ByBvwzZmA0XOvckeBGiRRxOcVwmEM=,tag:iKUOOT1f00zo2GPotjSBQA==,type:comment]
+    #ENC[AES256_GCM,data:OiekSmgyRNs4pdbsHpTjmChRaHC5Wb+2Iw==,iv:jCjjJvAl68WZpU38u5gLHv96nwxHivC7HjNfxQ4xu4Q=,tag:hWnufugra5koU27Or4pArg==,type:comment]
+    #ENC[AES256_GCM,data:NjwATd2Ud7q2rfaywe+4inUu5CGBY1mjZTA16UjXvDUkT/Wt43NU6FCvppA2lJInavo2PA3w6MMuefX/mp6p4QV8iv52GHnuN7VpsDo=,iv:LXP8OLlSXoCyJKECFBcdst3+ukONLPDxsJvFIpdg9ls=,tag:SGQ8w/VR6Z68L/PX5Q08wA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:PeXmeC9xYtAFyGYOBrCJ/cyXA8w9YRpnK4rGjWxbf1LLai8qlvuzyjgXjnBGRdPq,iv:C1VCgi/2jTf9hCXSuQoVGXPyBm9/rHDgig5cu9ksvZE=,tag:X2/BPN9HautrtUHTjNfxNQ==,type:str]
+    #ENC[AES256_GCM,data:z8aUFlNq2M57ur/+qY1WWdd7m2WV+u9Q711Iu8yc9b0kFKFWyTOUGeIgYkNoM3WX24vQlSlq8fNHMAzAdYjnnWX87atzI10=,iv:v1wIau8qPIsD3pen7JA+q2Fy/sQyoNwnlbeTS0E4xl8=,tag:PgHZKMPQrj72wEVczZbc2A==,type:comment]
+    #ENC[AES256_GCM,data:1GZOQ6D09psslSNE6ypxv6vHdnTdf66jiTdzuGXnwUHy9Uhj4D+Y1VIFAN0bmNVb9Pbv5OIU,iv:tB6Mle8rjstvqXAXTDmFPa6qZYgAYG0Z7N+5aHt6420=,tag:s8TFuDGAK7H57tS8m+Sb3Q==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:TZMjun5f/w==,iv:9KwNlc2vaJBqsYuoSh5DLHyowH14MdvOeC+gPv0CLdQ=,tag:PPd3k1uKx7S9SUBoiuOqlQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:u1SJO6Dr9MtRdXbGi+LPo+w0OQo=,iv:yuV9+6lnd5q5dJ6ea8UAv5wi6N8gc7I1CsKzCJaSYQY=,tag:iyvtAYPnxW9a0SnEOXRDVw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:a1X579w+/+dK7ZE=,iv:3XesGqV7iuqzwMGm7bG0yIMH8GPEcoJXoc41Jx9rGNE=,tag:hyPdFNdxrwZjSIMr//A/RA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:Ng8U2rIvmmy8n0cKVbC2,iv:o965bmBaRuzV7Fku5X1mvUekPN8Cp30oTCAagivXRVk=,tag:DDZZ6Ln0E6/MUlw729eN0A==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:a+dll7HudMMCjTpbhwuhGxyZGUmRxUXsjw==,iv:fYUkFDQ1dZ+nc+PGeRcVabSfVCntP6Yjk0InnxCHC8k=,tag:UKAmZPJ+KGWj2o8kAT4mLQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ZWej8gkt04jO9I1kTrypcV3cEwqtD6cl2QbBCpVdSw==,iv:aTCDYqROw/e1X7OdkBBkKMLn31FyfWVyFuw7Jm72038=,tag:h17Nx940DLK4yTVvxkMiUQ==,type:str]
+    #ENC[AES256_GCM,data:+DyPPJH1ExgAs28NTBTAVHL5+PjTdBP98R6IDo1UNS+dHirwLOE=,iv:w/pPTQEwZgpQf5ry4jSzZvpX9zapSy9z2LCiHlMw2TQ=,tag:e58EQCsTgdJgOc5PKPDK1g==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:GpE1fTwEr8NaLsUrOV6rEvvVfgM=,iv:IYzCKR3qmBONX6a19eDGaJ1Wldlvq0FvedKLvtjrHEs=,tag:erPG34LBz1ErYA0VgRz54w==,type:str]
+    #ENC[AES256_GCM,data:Gu5mHAbsgS01EEnWh0g=,iv:RBnZCRVZ34yazymxRqZKslf19b1+hEUv8LDKhpc89P8=,tag:HbQODYL0LETTfVU55z8hJA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:DVxciup2mBWnERWf4A==,iv:Ed7X5cFdkhtGqWRgYj4fZi80CIX42vWMklVcvic0ggo=,tag:+fiOipTTL6kOlmnxnQ831A==,type:str]
+    SVCNET: ENC[AES256_GCM,data:slntyiJ9buol0oJ4BA==,iv:D910NmdJQ6B6gZxFZhMuH81VV5lTFq6UpDJGigkgKac=,tag:rIH66ZYBgns/CV3SL3NOsA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:6K19OQ==,iv:pSU6wKr06w8uV9Cm3inAKX8g3nxg1l/v2E0HbIcZpss=,tag:7tlJ81oobbQrTlxk/pc7Uw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzMFhuSkJQR0JFTGJGSDFm
-            Wm9IQnloN3B5T2FFVXJYejBjczc1UFl0eWhvCnZEeWZmdTVtSVl3UmxHclNWa3Ur
-            YVNQeS9PRmpZSzNRMUFIK2FzVlJQWU0KLS0tIHRGTGdzRDR3NjdjeGZJUkJPR3Rp
-            dlBlL1ZuajlQVjBvSGs5eEQ3cHFCNm8KY9C8w/syKjaqJO31F57qPqxVE7LIcbxH
-            aQguDNjakK5QTEShwctLzI8CD00ihloG1TF+gW9oZPIZTMikluRUTg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5dDVHK0lTaURFZGQxY0Rw
+            em5pR3ptQWdTSGo1ZGxHcXczQkREL2Vvb1dFClpCT20zRzlLZC9reFNUVkNVL3Fv
+            RUNFbjVoeGRHWC9TOVF6dVJEYzVNWEUKLS0tIFpXNDMxN3ptYXRrUzRaNWtMei9T
+            VDN1OFVMdHR0M0E0WVRrdkJtK2NkMUEKojuRq4jR2Rtkk0y+6PrDU3x8A8RLcSqR
+            PTBgNIk4S5V56OFKHNbA9Pc6YooXdKabh6bwh8EuJoZO6Q7LkZiz2Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:26:30Z"
-    mac: ENC[AES256_GCM,data:sbUIggCH829eyc7TG8e+ihIkqs1J2l5Q+uqqiQt5ZGOdaYOaqwdcn+8IneRBwqVWwHt1ZHcZ2LD7sKHK43dW75WCOJZ+ubH7Ki3LxlS4xy9+gr48EJJ3YNjO4yDIx5nPUgneNiV7y4UuIOAX9LvMnow9e9J3fmElb+ZzVJ9levI=,iv:gWwpbl8FQVBvWeBS8IENsGR2UoOmDvqqnvgyva4/7zI=,tag:KxszdeyoWo7Pd0RnIFvnEQ==,type:str]
+    lastmodified: "2025-01-19T19:28:17Z"
+    mac: ENC[AES256_GCM,data:lpWT0KoEqCrsa1M0D18MiVBmVOGtQLO9ze2SpSFbh9qy3Tm+oG056Spi2ijN0UPpYPL6+SsXsNPLgKmAbVJRGb/TnebaNX733w2y0xXFgv950M0k4UF5LGSt8LzugG/Rk1HgWEA8ccZ3+34EK7+W5klvrU91PFUc6tW6SE2Mqkk=,iv:Yo9qWJHArGr/w1U3+jextW31SBVXmcvA2+fy397dktk=,tag:KjcNLHHy+55/qZfUoy9bHw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
